@@ -568,6 +568,7 @@ int UI_SelectCartType(int k)
 		UI_MENU_ACTION(44, "OSS 8 KB cartridge"),
 		UI_MENU_ACTION(45, "OSS two chip 16 KB cartridge (043M)"),
 		UI_MENU_ACTION(46, "Blizzard 4 KB cartridge"),
+		UI_MENU_ACTION(47, "AST 32 KB cartridge"),
 		UI_MENU_END
 	};
 
