@@ -1,3 +1,8 @@
+2011-08-24  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
+  for a 32 KB cartridge format used by Atari Super Turbo Multi-Cartridge.
+
+
 2011-08-06  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * afile.c: Fixed compilation errors for --target=basic introduced on
   2011-06-27.
